--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/style.min.css' %}"/>
-
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     {% block links %} {% endblock %}
 </head>
 <body>
+
 <nav class="navbar navbar-dark white">
   <a class="navbar-brand" >
     <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" height="30" alt="mdb logo">
@@ -20,52 +20,9 @@
         Sign up
     </button>
 </nav>
-<form method="post" action="register" >
-    {% csrf_token %}
-    <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body mx-3">
-            <div class="md-form mb-5">
-              <i class="fas fa-user prefix grey-text"></i>
-              <input name="username" type="text" id="orangeForm-name" class="form-control validate" required>
-              <label data-error="wrong" data-success="right" for="orangeForm-name">Your username</label>
-            </div>
-            <div class="md-form mb-5">
-              <i class="fas fa-envelope prefix grey-text"></i>
-              <input name="email" type="email" id="orangeForm-email" class="form-control validate" required>
-              <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
-            </div>
-
-            <div class="md-form mb-4">
-              <i class="fas fa-lock prefix grey-text"></i>
-              <input name="password1" type="password" id="orangeForm-pass" class="form-control validate" required>
-              <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
-            </div>
-
-            <div class="md-form mb-4">
-              <i class="fas fa-lock prefix grey-text"></i>
-              <input name="password2" type="password" id="orangeForm-pass" class="form-control validate" required>
-              <label data-error="wrong" data-success="right" for="orangeForm-pass">Confirm your password</label>
-            </div>
-
-          </div>
-          <div class="modal-footer d-flex justify-content-center">
-            <button class="btn btn-deep-orange">Sign up</button>
-          </div>
-        </div>
-      </div>
-    </div>
-</form>
-
-
+<div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {% include 'registrationForm.html' %}
+</div>
 
 {% block content-body %}
 {% endblock %}
@@ -73,6 +30,7 @@
 <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/mdb.min.js' %}"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
 </html>
