US1-4 Creacion del template home.html e inclusion de logo para Rabbit (provisional)

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-dark white">
   <a class="navbar-brand" >
-    <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" height="30" alt="mdb logo">
+     <i class="fas fa-registered fa-2x prefix text-info"></i>
   </a>
     <button class="btn btn-primary btn-sm my-0" type="button" data-toggle="modal" data-target="#modalRegisterForm">
         Sign up
