--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -16,7 +16,7 @@
   <a class="navbar-brand" >
      <i class="fas fa-registered fa-2x prefix text-info"></i>
   </a>
-    <button class="btn btn-primary btn-sm my-0" type="button" data-toggle="modal" data-target="#modalRegisterForm">
+    <button class="btn btn-primary btn-sm my-0 rounded-pill" type="button" data-toggle="modal" data-target="#modalRegisterForm">
         Sign up
     </button>
 </nav>
