--- a/rabbitApp/templates/registrationForm.html
+++ b/rabbitApp/templates/registrationForm.html
@@ -31,7 +31,7 @@
                 </div>
               </div>
               <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-deep-orange" type="button" onclick="register()">Sign up</button>
+                <button class="btn btn-info rounded-pill" type="button" onclick="register()">Sign up</button>
               </div>
             </div>
           </div>
