--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -23,6 +23,8 @@
         <button class="btn btn-primary btn-sm my-0 rounded-pill" type="button" data-toggle="modal" data-target="#modalLoginForm">
             Login
         </button>
+        {% else %}
+        <p class="mt-3">Hello, {{ request.user.username }}!</p>
     {% endif %}
 </nav>
 <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
