--- a/rabbitApp/templates/registrationForm.html
+++ b/rabbitApp/templates/registrationForm.html
@@ -12,22 +12,21 @@
               <div class="modal-body mx-3">
                 <div class="md-form mb-5">
                   <i class="fas fa-user prefix text-info"></i>
-                    {{ form.username|add_class:"form-control validate" }}
-                    <label data-error="wrong" data-success="right" for="{{form.username.id_for_label}}">Username</label>
-                    {{ form.username.errors }}
+                    {{ form_register.username|add_class:"form-control validate" }}
+                    <label data-error="wrong" data-success="right" for="{{form_register.username.id_for_label}}">Username</label>
+                    {{ form_register.username.errors }}
                 </div>
                 <div class="md-form mb-5">
-                  <i class="fas fa-lock prefix text-info" title="{{ form.password1.help_text }}"></i>
-                  {{ form.password1|add_class:"form-control validate" }}
-                    <label data-error="wrong" data-success="right" for="{{form.password1.id_for_label}}">Password</label>
-                    {{ form.password1.errors }}
+                  <i class="fas fa-lock prefix text-info" title="{{ form_register.password1.help_text }}"></i>
+                  {{ form_register.password1|add_class:"form-control validate" }}
+                    <label data-error="wrong" data-success="right" for="{{form_register.password1.id_for_label}}">Password</label>
+                    {{ form_register.password1.errors }}
                 </div>
-
                 <div class="md-form mb-4">
                   <i class="fas fa-lock prefix text-info"></i>
-                  {{ form.password2|add_class:"form-control validate" }}
-                    <label data-error="wrong" data-success="right" for="{{form.password2.id_for_label}}">Confirm Password</label>
-                    {{ form.password2.errors }}
+                  {{ form_register.password2|add_class:"form-control validate" }}
+                    <label data-error="wrong" data-success="right" for="{{form_register.password2.id_for_label}}">Confirm Password</label>
+                    {{ form_register.password2.errors }}
                 </div>
               </div>
               <div class="modal-footer d-flex justify-content-center">
