--- a/rabbitApp/templates/loginForm.html
+++ b/rabbitApp/templates/loginForm.html
@@ -9,28 +9,26 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-
               <div class="modal-body mx-3">
                     <div class="md-form mb-5">
                       <i class="fas fa-user prefix text-info"></i>
-                        {{ form.username|add_class:"form-control validate" }}
-                        <label data-error="wrong" data-success="right" for="{{form.username.id_for_label}}">Username</label>
-                        {{ form.username.errors }}
+                        {{ form_login.username|add_class:"form-control validate" }}
+                        <label data-error="wrong" data-success="right" for="{{form_login.username.id_for_label}}">Username</label>
+                        {{ form_login.username.errors }}
                     </div>
-                    <div class="md-form mb-5">
+                    <div class="md-form mb-4">
                       <i class="fas fa-lock prefix text-info" ></i>
-                      {{ form.password|add_class:"form-control validate" }}
-                        <label data-error="wrong" data-success="right" for="{{form.password.id_for_label}}">Password</label>
-                        {{ form.password.errors }}
+                      {{ form_login.password|add_class:"form-control validate" }}
+                        <label data-error="wrong" data-success="right" for="{{form_login.password.id_for_label}}">Password</label>
+                        {{ form_login.password.errors }}
                     </div>
               </div>
-              <div class="modal-footer d-flex justify-content-center">
+              <div class="modal-footer d-flex justify-content-center pt-10">
                 <button class="btn btn-info rounded-pill" type="button" onclick="login()">Login</button>
               </div>
             </div>
           </div>
     </form>
-
 
 <script type="text/javascript">
 
