HOT FIX solapamiento de nombre del input con el escrito por el usuario.

--- a/rabbitApp/templates/loginForm.html
+++ b/rabbitApp/templates/loginForm.html
@@ -58,6 +58,7 @@
                     location.reload();
                 } else {
                     modalLogForm.html(data);
+                    $('#id_username').focus();
                     modalLogForm.modal('show');
                 }
             }
