--- a/rabbitApp/templates/registrationForm.html
+++ b/rabbitApp/templates/registrationForm.html
@@ -63,6 +63,7 @@
                     location.reload();
                 } else {
                     $('#modalRegisterForm').html(data);
+                    $('#id_username').focus();
                     $('#modalRegisterForm').modal('show');
                 }
             }
