--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/style.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/rabbitStyles.css' %}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     {% block links %} {% endblock %}
 </head>
@@ -34,12 +35,22 @@
 <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 </div>
 
-{% block content-body %}
-{% endblock %}
+<div class="container">
+    {% block content-body %}
+
+    {% endblock %}
+</div>
+
 </body>
 <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/mdb.min.js' %}"></script>
+<script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
+
+{% block more-scripts %}
+
+{% endblock %}
+
 <script type="text/javascript">
 
     let modalLoginLoaded = false;
@@ -81,5 +92,6 @@
     }
 
 </script>
+
 
 </html>
