--- a/rabbitApp/templates/postForm.html
+++ b/rabbitApp/templates/postForm.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block content-body %}
-
     <div class="mt-4">
         <div class="row">
             <div class="col-xl-9">
@@ -15,11 +14,11 @@
                               aria-selected="true"><i class="fas fa-comment-alt text-info mr-2"></i>Post</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" id="image-video-tab" data-toggle="tab" href="#image-video-tab" role="tab" aria-controls="post"
+                            <a class="nav-link" id="image-video-tab" data-toggle="tab" href="#image" role="tab" aria-controls="image"
                               aria-selected="true"><i class="fas fa-image text-info mr-2"></i>Image & Video</a>
                           </li>
                             <li class="nav-item">
-                            <a class="nav-link active" id="link-tab" data-toggle="tab" href="#link-tab" role="tab" aria-controls="post"
+                            <a class="nav-link" id="link-tab" data-toggle="tab" href="#link-tab" role="tab" aria-controls="post"
                               aria-selected="true"><i class="fas fa-link text-info mr-2"></i>Link</a>
                           </li>
                         </ul>
@@ -30,6 +29,16 @@
                               {% csrf_token %}
                               {{ form_post.title|add_class:"form-control mt-2 mb-2"}}
                               {{ form_post.description }}
+                              <div class="mb-2 mt-2 float-right">
+                                  <button class="btn btn-blue btn-sm" type="submit">POST</button>
+                              </div>
+                          </form>
+                      </div>
+                        <div class="tab-pane fade ml-2 mr-2 mt-2 mb-2" id="image" role="tabpanel" aria-labelledby="image-video-tab">
+                          <form id="postForm" action="{% url 'img_submit' %}" enctype='multipart/form-data' method="post">
+                              {% csrf_token %}
+                              {{ form_img_post.title|add_class:"form-control mt-2 mb-2"}}
+                              {{ form_img_post.img }}
                               <div class="mb-2 mt-2 float-right">
                                   <button class="btn btn-blue btn-sm" type="submit">POST</button>
                               </div>
