--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -24,8 +24,24 @@
         <button class="btn btn-primary btn-sm my-0 rounded-pill" type="button" onclick="modal_login()">
             Login
         </button>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Menu</button>
+        <div class="dropdown-menu dropdown-primary">
+            <a class="dropdown-item" onclick="modal_register()">Register</a>
+            <a class="dropdown-item" onclick="modal_login()">Log in</a>
+          </div>
+        </div>
         {% else %}
         <p class="mt-3">Hello, <b>{{ request.user.username }}</b>!</p>
+
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Menu</button>
+        <div class="dropdown-menu dropdown-primary">
+            <a class="dropdown-item" href="/logout#">Log out</a>
+          </div>
+        </div>
     {% endif %}
 </nav>
 
