--- a/rabbitApp/templates/postForm.html
+++ b/rabbitApp/templates/postForm.html
@@ -23,35 +23,58 @@
                 </div>
                 <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active ml-2 mr-2 mt-2 mb-2" id="post" role="tabpanel" aria-labelledby="post-tab">
-                      <form id="postForm" action="" method="post">
+                      <form id="description_form" action="" method="post">
                           {% csrf_token %}
                           {{ form_post.title|add_class:"form-control mt-2 mb-2"}}
                           {{ form_post.description |add_class:"form-control mt-2 mb-2"}}
-                          <div class="mb-2 mt-2 float-right">
-                              <button class="btn btn-blue btn-sm" type="submit">POST</button>
+                          <div class="mb-2 mt-2 ">
+                          {% if form_post.errors %}
+                              <i class="fas fa-exclamation-triangle prefix text-danger ml-2"></i>
+                               {% for error in form_post.errors %}
+                                    <span class="text-danger ">{{ error }}</span>
+                               {% endfor %}
+                          {% endif %}
+                              <button class="btn btn-blue btn-sm float-right" type="button" onclick="submit_description()">POST</button>
                           </div>
                       </form>
                   </div>
                     <div class="tab-pane fade ml-2 mr-2 mt-2 mb-2" id="image" role="tabpanel" aria-labelledby="image-video-tab">
-                      <form id="postForm" action="{% url 'link_submit' %}" method="post">
+                      <form id="image_form" enctype='multipart/form-data' method="post">
                           {% csrf_token %}
                           {{ form_img_post.title|add_class:"form-control mt-2 mb-2"}}
                           {{ form_img_post.img }}
-                          <div class="mb-2 mt-2 float-right">
-                              <button class="btn btn-blue btn-sm" type="submit">POST</button>
+                          <div class="mb-2 mt-2" >
+                            <div class="row">
+                                <div class="col-12" id="img_show">
+                                </div>
+                            </div>
+                              {% if form_img_post.errors %}
+                                   <i class="fas fa-exclamation-triangle prefix text-danger ml-2"></i>
+                                   {% for error in form_img_post.errors %}
+                                        <span class="text-danger ">{{ error }}</span>
+                                   {% endfor %}
+                              {% endif %}
+                                  <button class="btn btn-blue btn-sm float-right" type="button" onclick="submit_image()">POST</button>
                           </div>
                       </form>
                   </div>
                     <div class="tab-pane fade ml-2 mr-2 mt-2 mb-2" id="link" role="tabpanel" aria-labelledby="link-tab">
-                      <form id="postForm" action="{% url 'img_submit' %}" enctype='multipart/form-data' method="post">
+                      <form id="link_form"  method="post">
                           {% csrf_token %}
                           {{ form_link.title|add_class:"form-control mt-2 mb-2"}}
                           {{ form_link.link }}
-                          <div class="mb-2 mt-2 float-right">
-                              <button class="btn btn-blue btn-sm" type="submit">POST</button>
+                          <div class="mb-2 mt-2 ">
+                              {% if form_link.errors  %}
+                                   <i class="fas fa-exclamation-triangle prefix text-danger ml-2"></i>
+                                   {% for error in form_link.errors %}
+                                        <span class="text-danger ">{{ error }}</span>
+                                   {% endfor %}
+                              {% endif %}
+                              <button class="btn btn-blue btn-sm float-right" type="button" onclick="submit_link()">POST</button>
                           </div>
                       </form>
                   </div>
+                </div>
                 </div>
                 <div class="card-footer"></div>
             </div>
@@ -61,4 +84,3 @@
         </div>
 
     </div>
-</div>
