--- a/rabbitApp/templates/submit.html
+++ b/rabbitApp/templates/submit.html
@@ -7,16 +7,89 @@
 
 {% block more-scripts %}
      <script type="text/javascript">
-        ClassicEditor
+        var ckEditor;
+        $(document).ready(() => {
+            ClassicEditor
             .create( document.querySelector( '#id_description' ), {
                  toolbar: [ 'heading', '|', 'bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote' ],
-                
+
             } )
             .then( editor => {
-                    console.log( editor );
+                    ckEditor = editor;
             } )
             .catch( error => {
                     console.error( error );
             } );
+
+            $("#id_img").change(function () {
+                filePreview(this);
+            });
+
+        });
+
+        var submit_description = () => {
+            let form_data_serialized = $('#description_form').serializeArray();
+            form_data_serialized.find(item => item.name === 'description').value = ckEditor.getData();
+            console.log(form_data_serialized);
+            $.ajax({
+                method: 'POST',
+                url: "{% url 'submit' %}",
+                data: form_data_serialized,
+                success: (data) => {
+                    if (data.status === 'ok') {
+                        location.href = "{% url 'index' %}"
+                    } else {
+                        $("#post_form").html(data);
+                    }
+                }
+            });
+        };
+
+        var submit_link = () => {
+             $.ajax({
+                method: 'POST',
+                url: "{% url 'link_submit' %}",
+                data: $('#link_form').serialize(),
+                success: (data) => {
+                    if (data.status === 'ok') {
+                        location.href = "{% url 'index' %}"
+                    } else {
+                        $("#post_form").html(data);
+                    }
+                }
+            });
+        };
+
+        var filePreview = (input) => {
+            if (input.files && input.files[0]) {
+                let reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#img_show + embed').remove();
+                    $('#img_show').html('<embed src="'+e.target.result+'" class="mx-auto d-block" width="450" height="300">');
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        };
+
+        var submit_image = () => {
+            let form = document.getElementById("image_form");
+            let data = new FormData(form);
+            $.ajax({
+                method: 'POST',
+                url: "{% url 'img_submit' %}",
+                data: data,
+                enctype: 'multipart/form-data',
+                contentType: false,
+                processData: false,
+                success: (data) => {
+                    if (data.status === 'ok') {
+                        location.href = "{% url 'index' %}"
+                    } else {
+                        $("#post_form").html(data);
+                    }
+                }
+            });
+        }
+
     </script>
 {% endblock %}
