--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Rabbit{% endblock %}</title>
+    <link rel = "icon" href = "static/img/rabbit-logo.png"
+        type = "image/x-icon">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}"/>
@@ -14,7 +16,7 @@
 <body>
 <nav class="navbar navbar-light white" id="navbar_principal">
   <a class="navbar-brand" >
-     <i class="fas fa-registered fa-2x prefix text-info"></i>
+     <img src="static/img/rabbit-logo.png" class="img" height="30px">
   </a>
 
     {% if not request.user.is_authenticated %}
