--- a/rabbitApp/templates/sidebar.html
+++ b/rabbitApp/templates/sidebar.html
@@ -10,16 +10,16 @@
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
     <div class="card my-4">
-            <h5 class="card-header">What's Rabbit</h5>
+            <h5 class="card-header">What's Rabbit about</h5>
         <div class="card-body">
-            <p class="card-text"> A community to post and share anything you want</p>
-            <p class="card-text"> Remember before posting to:</p>
+            <p class="card-text"> A community to post and share everything you want.
+                Register and begin sharing your thougts, links and memes. </p>
+            <p class="card-text"> Remember before posting:</p>
             <ul>
                 <li class="card-text">Respect others users</li>
                 <li class="card-text">Behave like you would in real life</li>
+                <li class="card-text">Posting memes can be and addictive and cause severe procrastination</li>
             </ul>
-            <a href="https://www.reddit.com"
-               class="btn btn-danger">The original!</a>
         </div>
     </div>
 </div>
