--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -21,8 +21,8 @@
     <form id="searchbar" action="{% url 'search' %}" method="get" class="form-inline my-2 my-lg-0" style="width: 50%; margin-left: 20%">
       <i class="fas fa-search" aria-hidden="true"></i>
       <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-        aria-label="Search">
-        <input name="q" type="text" value="{{request.GET.q}}">
+        aria-label="Search"
+        name="q" type="text" value="{{request.GET.q}}">
     </form>
 
     {% if not request.user.is_authenticated %}
