--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -27,7 +27,10 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-m-2">
+                        <a href="#">
                             <p class="card-text"><b> u/{{ post.username | safe }}</b></p>
+
+                        </a>
                     </div>
 
                 </div>
