Hotfix: no se pierde la ruta de la imagen de la página al cambiar a una subpagina y solo muestra la imagen del post cuando es un post de imagen.

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -18,7 +18,7 @@
      <div class="row justify-content-start">
           <div class="col-2">
              <a class="navbar-brand" href="{% url 'index' %}">
-                <img src="static/img/rabbit-logo.png" class="img" height="30px">
+                <img src="{% static 'img/rabbit-logo.png' %}" class="img" height="30px">
              </a>
           </div>
 
