--- a/rabbitApp/templates/home.html
+++ b/rabbitApp/templates/home.html
@@ -4,14 +4,14 @@
     {% for post in lastPost %}
         <div class="card mb-4">
             <div class="card-body">
-                <img src= "\media\{{ post.img }}" class="img-fluid" alt="img" />
                 <p class="card-text text-muted h6">Posted by <b>{{ post.user }}</b> at {{ post.creation_date }} </p>
                 <h2 class="card-title">{{ post.title | safe }}</h2>
                 {% if post.description %}
                     <p class="card-text">{{ post.description | safe }}</p>
-                {% endif %}
-                {% if post.link %}
-                    <a href={{ post.link}}>{{ post.link }}</a>
+                {% elif post.img %}
+                    <img src= "{{ post.img.url }}" class="img-fluid" alt="img" />
+                {% elif post.link %}
+                    <a href={{ post.link }}>{{ post.link }}</a>
                 {% endif %}
             </div>
         </div>
